[package]
name = "tempo"
version = "0.1.0"
edition = "2024"

[dependencies]
atty = "0.2.14"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.4.11", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
edit = "0.1.5"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
toml = "0.8.23"

[dev-dependencies]
tempfile = "3.20.0"
